Add LazyInstanceTest.PriorityInversionAtInitializationResolves

Use SysInfo::NumberOfProcessors() for kNumForegroundThreads so
that the test is relevant on very powerful machine.

On my Z840, this test takes 5 to 10 seconds to complete without
r527445 but ~30ms with it :).


R=brucedawson@chromium.org, fdoray@chromium.org

Bug: 799853, 797129
Change-Id: I3ff59b92f0b4c15574f091549b3cfe8eadd9ae6f